--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,4 +5,4 @@ COPY package*.json ./
 RUN npm install --only=production
 COPY . .
 RUN npm run build
-CMD [ "HOST=0.0.0.0", "npm", "start" ]
+CMD [ "npm", "start" ]
